2017-03-30  JMB  Update UI translations, fix them on Android

    Updated the UI translation files, and fixed a configuration bug which was
    preventing them from being used on Android.

2017-03-29  JMB  Add help action to Android, visual fixes

    Added a "Help" action to Android which points to the online help files
    in the appropriate language.

    Changed the default Android alternate row background color to one which
    is easier to distinguish, and removed some padding on dynamic-height
    text inputs which was causing the cursor to be mis-positioned.

2017-03-28  JMB  Fix image selector/editor on Android

    The image selection/editing dialog hadn't been properly tested on
    Android yet; made a couple of fixes to make it work correctly.

2017-03-27  JMB  More reliable column resizing

    At least on Android, setting the width of a column from the column
    statistics dialog triggered a cascade of events which could sometimes
    inadvertently change the widths of other columns also.  Disabled a signal
    hander while applying changes from the dialog to prevent this from
    happening.

2017-03-24  JMB  Better slideshow mode

    Switched over slideshows to use the image viewer dialog which was
    just refactored.

2017-03-22  JMB  Better image fullscreen mode

    PortaBase was still using a hack for fullscreen image display that
    predated the addition of proper fullscreen support in Qt, and at
    least with Qt 5 it sometimes resulted in odd failures to return to
    normal display mode.  Switched over to the same approach used for
    the main window's fullscreen mode.

2017-03-20  JMB  Removed image resolution limit

    All of PortaBase's supported platforms now have much more RAM than
    the original Sharp Zaurus (and Qt has gotten better about downscaling
    PNG images while loading), so the 800x600 resolution cap no longer
    makes sense.  The limit has been removed; images smaller than the