@@ -23,11 +23,13 @@ Help Pages Generation
 ---------------------
 Make sure you have Python 2.4 or higher installed, as well as the "pip"
 installer for Python packages.  Install Sphinx by running "pip install Sphinx"
-as root or using sudo.  Make sure you have GNU gettext installed, since it's
-used to process the help file translations.  To be able to automatically
-download the latest help page translations from Transifex, also run
-"pip install transifex-client". Use the script at packaging/generate_help.sh
-to generate the help files; see the top of the script for usage information.
+as root or using sudo.  Also install the theme used by the PortaBase
+documentation by running "pip install sphinx_rtd_theme".  Make sure you have
+GNU gettext installed, since it's used to process the help file translations.
+To be able to automatically download the latest help page translations from
+Transifex, also run "pip install transifex-client". Use the script at
+packaging/generate_help.sh to generate the help files; see the top of the
+script for usage information.
 
 Debian Package Building
 -----------------------
