@@ -46,7 +46,9 @@ http://pypi.python.org/pypi/setuptools/ and run that also.  Open a new DOS
 prompt and run "C:\Python27\Scripts\easy_install pip" (change the path as
 necessary) to install a more capable python package manager.  Running
 "C:\Python27\Scripts\pip install Sphinx" will install Sphinx and all the other
-Python libraries that it depends on.  To be able to automatically download the
+Python libraries that it depends on.  Run
+"C:\Python27\Scripts\pip install sphinx_rtd_theme" to also install the theme
+used by the documentation.To be able to automatically download the
 latest help page translations from Transifex, also run
 "C:\Python27\Scripts\pip install transifex-client".
 
